lintian (2.4.2) UNRELEASED; urgency=low

  * Summary of tag changes:
    + Added:
      - copyright-refers-to-deprecated-bsd-license-file
      - init.d-script-depends-on-unknown-virtual-facility
      - xc-package-type-in-debian-control (pedantic)
    + Removed:
      - package-type-in-debian-control

  * checks/control-file{,.desc}:
    + [RA] Remove package-type-in-debian-control now that dpkg-dev handles
      it as desired by the d-i team.  xc-package-type-in-debian-control
      replaces it as a pedantic check to encourage switching to the
      official name.  Thanks, Raphael Hertzog.
  * checks/copyright-file{,.desc}:
    + [RA] Deprecate references to /usr/share/common-licenses/BSD in
      debian/copyright following the change in Policy 3.8.5.
  * checks/fields:
    + [RA] Allow Breaks without a version if the broken package is a
      virtual package.
  * checks/huge-usr-share{,.desc}:
    + [RA] Count file size from the tar listing rather than using du.  The
      results of du vary based on file system and other factors and make
      the tag difficult to test.
  * checks/init.d{,.desc}:
    + [RG] Check for init.d scripts depending on unknown virtual
      facilities.
  * checks/menu-format.desc:
    + [RA] Fix typo in long description of duplicated-key-in-desktop-entry.
      Thanks, Niels Thykier.  (Closes: #580700)
  * checks/menus:
    + [RG] Recognise call to update-menus when using 'exec.'

  * collection/objdump-info:
    + [RG] Disable etch compatibility code.
  * collection/strings:
    + [RG] Correctly handle ELF binaries with whitespaces in their name.
      (LP: #540342)

  * data/fields/virtual-packages:
    + [RA] Update to current unstable and add the old xserver-xorg video
      and input virtual packages.
  * data/init.d/data/init.d/virtual_facilities
    + [RG] New list of virtual facilities that exist in the archive.
  * data/spelling/corrections:
    + [RG] Add more spelling corrections.

  * frontend/lintian: