@@ -6,10 +6,25 @@ Standards-Version: {$standards_version}
 Build-Depends: debhelper (>= 7.0.50~)
 
 Package: {$srcpkg}
-Architecture: {$architecture}
+Architecture: any
 Depends: $\{shlibs:Depends\}, $\{misc:Depends\}, httpd
+Provides:
+    123456789,
+    {$srcpkg}-$\{source:Version\},
+    arch-specific [i386],
+    provides-are-allowed [!i386]
 Description: {$description}
  This is a test package designed to exercise some feature or tag of
  Lintian.  It is part of the Lintian test suite and may do very odd
+ things.  It should not be installed like a regular package.  It may
+ be an empty package.
+
+Package: {$srcpkg}2
+Architecture: {$architecture}
+Depends: $\{shlibs:Depends\}, $\{misc:Depends\}
+Provides: a, iNvAlId-NaMe, versioned (>> 0.1)
+Description: {$description} - bogus
+ This is a bogus test package designed to exercise some feature or tag
+ of Lintian.  It is part of the Lintian test suite and may do very odd
  things.  It should not be installed like a regular package.  It may
  be an empty package.
