@@ -3,4 +3,6 @@ Sequence: 6000
 Version: 1.0
 Description: Tests related to virtual packages
 Test-For:
+ bad-provided-package-name
+ versioned-provides
  virtual-package-depends-without-real-package-depends
